objects/WorkOrderRecordTypes__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Read_Only_Tech__c</fullName>
        <label>Read Only Tech</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Edit__c</fullName>
        <label>Service Edit</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Service__c</fullName>
        <label>Standard Service</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Work Order Record Types</label>
</CustomObject>